# tinydns

./: .gitignore  changelog.md  dependencies.nix  env-replace.nix  mkdist  tinydns.cabal  versions
proto/TinyDNS/: Paths.hs
src/Data/MoreUnicode/: Functor2.hs  Monoid2.hs
src/DomainNames/: Constants.hs  Domain.hs  FQDN.hs  Hostname.hs  UQDN.hs
src/DomainNames/Error/: DomainError.hs  DomainLabelError.hs  ExecCreateDomainError.hs  FQDNError.hs  HostnameError.hs  LocalnameError.hs  UQDNError.hs
src/DomainNames/T/: FQDN.hs  Hostname.hs
src/Fluffy/: Applicative.hs  Dhall.hs  Either.hs  Equalish.hs  ErrTs.hs  Foldable2.hs  Functor2.hs  IP4.hs  IP42.hs  Indexable.hs  Lens2.hs  List.hs  MACAddress.hs  MACAddress2.hs  Main.hs  Map.hs  Monad.hs  MonadError2.hs  MonadIO2.hs  Natural.hs  Options2.hs  Parsec2.hs  Path2.hs  Printable.hs  Quasi.hs  Tasty2.hs  Temp2.hs  TempFile2.hs  Text2.hs  Textual.hs  ToNatural.hs
src/Fluffy/Dhall/: Error.hs  ErrorOrphans.hs
src/Fluffy/IO/: Error2.hs
src/Fluffy/MonadIO/: Error2.hs  File2.hs
src/Fluffy/Parsec/: Error2.hs
src/Fluffy/T/: Dhall.hs  MACAddress.hs
src/HostsDB/: Host.hs  HostMap.hs  Hosts.hs  LHostMap.hs  LocalHostMap.hs  LocalnameMap.hs
src/HostsDB/Error/: HostsError.hs
src/HostsDB/T/: Host.hs  Hosts.hs
src/HostsDB/Types/: ErrTs.hs
src/TinyDNS/: Edit.hs  Hosts.hs  Paths.hs
src/TinyDNS/Error/: MkTinyDNSError.hs
src/TinyDNS/T/: Hosts.hs
src/TinyDNS/Types/: Clean.hs  RuntimeContext.hs  TinyDNSData.hs
src/TinyDNS/Types/MkTinyDNSData/: Options.hs
t/: tinydns.hs
