-- The name of the package.
name:                tinydns

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            yaml hosts database tool

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:           Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:        >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    DomainNames.Constants
                    , DomainNames.Domain
                    , DomainNames.Error.ExecCreateDomainError
                    , DomainNames.Error.DomainError
                    , DomainNames.Error.DomainLabelError
                    , DomainNames.Error.FQDNError
                    , DomainNames.Error.HostnameError
                    , DomainNames.FQDN
                    , DomainNames.T.FQDN
                    , DomainNames.Hostname
                    , DomainNames.T.Hostname
                    , DomainNames.Error.LocalnameError
                    , DomainNames.UQDN
                    , DomainNames.Error.UQDNError

                    , HostsDB.Host
                    , HostsDB.T.Host
                    , HostsDB.HostMap
                    , HostsDB.LHostMap
                    , HostsDB.Hosts
                    , HostsDB.T.Hosts
                    , HostsDB.LocalnameMap

                    , TinyDNS.Paths

  -- modules included in this library but not exported.
  other-modules:    

  default-extensions: NoImplicitPrelude
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      aeson, base, base-unicode-symbols, data-textual, dhall
                    , hashable, lens, mono-traversable, mtl, path, tasty
                    , tasty-hunit, template-haskell, text, text-printer
                    , unordered-containers, yaml

                    , fluffy >= 0.2.8.0, proclib >= 3.1.1.1, tfmt

  -- Directories containing source files.
  hs-source-dirs:     src

  -- Base language which the package is written in.
  default-language:   Haskell2010

-------------------------------------------------------------------------------

executable mktinydnsdata
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  -- add +RTS -xc -KK for 1K stack
  -- add ?RTS -xt -hy to produce a usage graph
  main-is:             mktinydnsdata.hs
  hs-source-dirs:      bin
  build-depends:       base, base-unicode-symbols, bytestring, data-textual
                     , dhall, lens, mtl, optparse-applicative, path, split
                     , text, unordered-containers, yaml

                     , fluffy >= 0.2.8.0, proclib >= 3.1.1.0, tfmt
                     , tinydns
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

----------------------------------------

test-suite tinydns-tests
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          tinydns.hs
  build-depends:    fluffy, base, base-unicode-symbols, optparse-applicative
                  , tasty, tinydns
  default-language: Haskell2010
