-- The name of the package.
name:                tinydns

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.2

-- A short (one-line) description of the package.
synopsis:            tinydns management

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:           Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:        >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    TinyDNS.Edit
                    , TinyDNS.Error.MkTinyDNSError
                    , TinyDNS.Hosts, TinyDNS.T.Hosts
                    , TinyDNS.Paths
                    , TinyDNS.Types.Clean
                    , TinyDNS.Types.MkTinyDNSData.Options
                    , TinyDNS.Types.RuntimeContext
                    , TinyDNS.Types.TinyDNSData

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , UnicodeSyntax
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      base, base-unicode-symbols, data-default, data-textual
                    , lens, mtl, optparse-applicative, path, tasty, tasty-hunit
                    , text, text-printer, unordered-containers

                    , dhall-plus    >= 0.0.2.0
                    , domainnames   >= 0.1.1.1
                    , fpath         >= 1.2.0.0
                    , has-callstack >= 1.0.1.0
                    , hostsdb       >= 0.1.1.1
                    , ip4           >= 0.0.0.1
                    , mac-address   >= 0.0.0.2
                    , monaderror-io >= 1.2.0.0
                    , monadio-plus  >= 2.0.0.0
                    , more-unicode  >= 0.0.16.0
                    , natural       >= 0.0.1.0
                    , proclib       >= 3.2.3.1
                    , stdmain       >= 1.5.3.1
                    , tasty-plus    >= 1.5.1.0
                    , tfmt          >= 0.2.4.0

  -- Directories containing source files.
  hs-source-dirs:     src

  -- Base language which the package is written in.
  default-language:   Haskell2010

-------------------------------------------------------------------------------

executable mktinydnsdata
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  -- add +RTS -xc -KK for 1K stack
  -- add ?RTS -xt -hy to produce a usage graph
  main-is:             mktinydnsdata.hs
  hs-source-dirs:      bin
  build-depends:       base, base-unicode-symbols, data-textual, mtl, text

                     , dhall-plus
                     , domainnames
                     , fpath
                     , hostsdb
                     , monaderror-io
                     , monadio-plus
                     , more-unicode
                     , proclib
                     , stdmain

                     , tinydns
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , TypeApplications
                    , UnicodeSyntax

  default-language:    Haskell2010

----------------------------------------

test-suite tinydns-tests
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          tinydns.hs
  build-depends:    base, base-unicode-symbols, lens, optparse-applicative
                  , tasty

                  , monaderror-io
                  , more-unicode
                  , natural
                  , proclib
                  , tasty-plus

                  , tinydns
  default-language: Haskell2010

----------------------------------------